--- a/app/html/options.html
+++ b/app/html/options.html
@@ -141,6 +141,10 @@
                 <span class="label-desc">Use Compass</span>
             </label>
             <label>
+                <input type="checkbox" ng-model="userConfig.scss.fullCompass">
+                <span class="label-desc">Full Compass Support</span>
+            </label>
+            <label>
                 <span class="label-desc">Output Style</span><br>
                 <select ng-model="userConfig.scss.outputStyle">
                     <option value="compressed">Compressed</option>
@@ -169,7 +173,10 @@
                 <input type="checkbox" ng-model="userConfig.sass.compass">
                 <span class="label-desc">Use Compass</span>
             </label>
-
+            <label>
+                <input type="checkbox" ng-model="userConfig.scss.fullCompass">
+                <span class="label-desc">Full Compass Support</span>
+            </label>
             <label>
                 <span class="label-desc">Output Style</span><br>
                 <select ng-model="userConfig.sass.outputStyle">
