save to html folder fix #60

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -83,6 +83,10 @@
                 <input type="text" ng-model="userConfig.jsPath">
             </label>
             <label>
+                <span class="label-desc">Html Folder</span><br>
+                <input type="text" ng-model="userConfig.htmlPath">
+            </label>
+            <label>
                 <span class="label-desc">HTML File Extension</span><br>
                 <input type="text" ng-model="userConfig.htmlExtension">
             </label>
