--- a/app/html/options.html
+++ b/app/html/options.html
@@ -61,6 +61,7 @@
 <div class="tabbable tabs-left" style="border-bottom: 1px solid #CCC;margin-top: 25px;">
     <ul class="nav nav-tabs">
         <li class="active"><a href="#general" data-toggle="tab">General</a></li>
+        <li><a href="#folders" data-toggle="tab">Folders</a></li>
         <li><a href="#less" data-toggle="tab">Less</a></li>
         <li><a href="#sass" data-toggle="tab">Sass</a></li>
         <li><a href="#stylus" data-toggle="tab">Stylus</a></li>
@@ -74,6 +75,29 @@
 
         <div class="tab-pane active" id="general">
             <label>
+                <span class="label-desc">HTML File Extension</span><br>
+                <input type="text" ng-model="userConfig.htmlExtension">
+            </label>
+            <label>
+                <input type="checkbox" ng-model="userConfig.enableErrorNotifications">
+                <span class="label-desc">Enable Error Notifications</span>
+            </label>
+            <label>
+                <input type="checkbox" ng-model="userConfig.enableSuccessNotifications">
+                <span class="label-desc">Enable Success Notifications</span>
+            </label>
+            <label>
+                <span class="label-desc">Exclude files that contain following patterns</span>
+                <span class="muted" style="display: block">Please enter comma separated list</span>
+                <input type="text" ng-model="userConfig.filterPatterns">
+            </label>
+            <label>
+                <button class="btn" ng-click="clearCache($event)">Clear Prepros Cache</button>
+            </label>
+        </div>
+
+        <div class="tab-pane" id="folders">
+            <label>
                 <span class="label-desc">CSS Folder</span><br>
                 <input type="text" ng-model="userConfig.cssPath">
             </label>
@@ -85,28 +109,8 @@
                 <span class="label-desc">Html Folder</span><br>
                 <input type="text" ng-model="userConfig.htmlPath">
             </label>
-            <label>
-                <span class="label-desc">HTML File Extension</span><br>
-                <input type="text" ng-model="userConfig.htmlExtension">
-            </label>
-            <label>
-                <span class="label-desc">Exclude files that contain following patterns</span>
-                <span class="muted" style="display: block">Please enter comma separated list</span>
-                <input type="text" ng-model="userConfig.filterPatterns">
-            </label>
-            <label>
-                <input type="checkbox" ng-model="userConfig.enableErrorNotifications">
-                <span class="label-desc">Enable Error Notifications</span>
-            </label>
-            <label>
-                <input type="checkbox" ng-model="userConfig.enableSuccessNotifications">
-                <span class="label-desc">Enable Success Notifications</span>
-            </label>
-
-            <label>
-                <button class="btn" ng-click="clearCache($event)">Clear Prepros Cache</button>
-            </label>
         </div>
+
 
         <!-- Less -->
         <div class="tab-pane" id="less">
