--- a/app/html/options.html
+++ b/app/html/options.html
@@ -273,6 +273,8 @@
         <!-- Advanced Settings -->
         <div class="tab-pane" id="advanced">
 
+            <div class="alert alert-danger" style="margin-bottom: 0; width: 350px;"><i class="icomoon-info"></i> These settings might hurt, Use with caution !</div><br>
+
             <label>
                 <input type="checkbox" ng-model="userConfig.useCustomSassCompass">
                 <span class="label-desc">Custom Sass Compass Executable</span>
