Option to clear log and keep only 5 last items and some ui improvements fix #77

--- a/app/html/about.html
+++ b/app/html/about.html
@@ -87,7 +87,10 @@
 </head>
 <body style="overflow: auto">
 <div ng-controller="AboutCtrl" class="preprosAbout">
-    <h4>Prepros {{config.version}}</h4>
+
+    <div class="clearfix heading">
+        <h4>Prepros {{config.version}}</h4>
+    </div>
 
     <div class="tabbable">
         <ul class="nav nav-tabs">
