--- a/app/html/options.html
+++ b/app/html/options.html
@@ -56,7 +56,9 @@
 </head>
 <body style="overflow: auto">
 <div ng-controller="OptionsCtrl" class="preprosOptions">
-<h4>Prepros App Options</h4>
+<div class="heading">
+    <h4>Prepros App Options</h4>
+</div>
 
 <div class="tabbable tabs-left" style="border-bottom: 1px solid #CCC;margin-top: 25px;">
     <ul class="nav nav-tabs">
