--- a/app/html/options.html
+++ b/app/html/options.html
@@ -270,6 +270,19 @@
                 <input type="checkbox" ng-model="userConfig.slim.pretty">
                 <span class="label-desc">Pretty Output</span>
             </label>
+            <label>
+                <input type="checkbox" ng-model="userConfig.slim.fourSpaceIndent">
+                <span class="label-desc">Indent By Four Spaces</span>
+            </label>
+            <label>
+                <span class="label-desc">Output Format</span><br>
+                <select ng-model="userConfig.slim.format">
+                    <option value=":xhtml">XHTML</option>
+                    <option value=":html5">HTML5</option>
+                    <option value=":html">HTML</option>
+                    <option value=":html4">HTML4</option>
+                </select>
+            </label>
         </div>
 
         <!-- Advanced Settings -->
