first step towards javascript minification and concatenation
// @prepros-import somefile.js

--- a/app/app.html
+++ b/app/app.html
@@ -60,6 +60,7 @@
     <script src="scripts/services/fileTypes/stylus.js"></script>
     <script src="scripts/services/fileTypes/markdown.js"></script>
     <script src="scripts/services/fileTypes/coffee.js"></script>
+    <script src="scripts/services/fileTypes/javascript.js"></script>
     <script src="scripts/services/fileTypes/jade.js"></script>
     <script src="scripts/services/fileTypes/haml.js"></script>
     <script src="scripts/services/fileTypes/slim.js"></script>
