Options for less strict units and math #75

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -127,6 +127,14 @@
                 <span class="label-desc">Line numbers</span>
             </label>
             <label>
+                <input type="checkbox" ng-model="userConfig.less.strictMath">
+                <span class="label-desc">Strict Maths</span>
+            </label>
+            <label>
+                <input type="checkbox" ng-model="userConfig.less.strictUnits">
+                <span class="label-desc">Strict Units</span>
+            </label>
+            <label>
                 <input type="checkbox" ng-model="userConfig.less.compress">
                 <span class="label-desc">Compress CSS</span>
             </label>
