sass unix new lines fix #96

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -151,6 +151,10 @@
                 <span class="label-desc">Line numbers</span>
             </label>
             <label>
+                <input type="checkbox" ng-model="userConfig.sass.unixNewlines">
+                <span class="label-desc">Unix Newlines</span>
+            </label>
+            <label>
                 <input type="checkbox" ng-model="userConfig.sass.debug">
                 <span class="label-desc">Debug Info</span>
             </label>
