--- a/app/html/options.html
+++ b/app/html/options.html
@@ -298,7 +298,7 @@
             <label>
                 <span class="label-desc">Indent</span>
                 <select ng-model="userConfig.slim.indent">
-                    <option value="default">Default</option>
+                    <option value="default">Default ( 2 spaces )</option>
                     <option value="four">Four Spaces</option>
                     <option value="tab">Tab</option>
                 </select>
