added line break

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -296,7 +296,7 @@
                 <span class="label-desc">Pretty Output</span>
             </label>
             <label>
-                <span class="label-desc">Indent</span>
+                <span class="label-desc">Indent</span><br>
                 <select ng-model="userConfig.slim.indent">
                     <option value="default">Default ( 2 spaces )</option>
                     <option value="four">Four Spaces</option>
