updated resources url

--- a/app/html/about.html
+++ b/app/html/about.html
@@ -3,10 +3,10 @@
 <head>
     <title>About Prepros</title>
 
-    <script src="../scripts/lib/jquery.js"></script>
-    <script src="../scripts/lib/angular.js"></script>
-    <script src="../scripts/lib/underscore.js"></script>
-    <script src="../scripts/lib/bootstrap.js"></script>
+    <script src="../scripts/libraries/jquery.min.js"></script>
+    <script src="../scripts/libraries/angular.min.js"></script>
+    <script src="../scripts/libraries/underscore.min.js"></script>
+    <script src="../scripts/libraries/bootstrap.min.js"></script>
     <link href="../assets/css/style.css" rel="stylesheet">
     <script>
         function AboutCtrl($scope) {
