--- a/app/html/log.html
+++ b/app/html/log.html
@@ -2,8 +2,8 @@
 <html ng-app="prepros">
 <head>
     <title>Prepros Log</title>
-    <script src="../scripts/lib/jquery.js"></script>
-    <script src="../scripts/lib/angular.js"></script>
+    <script src="../scripts/libraries/jquery.min.js"></script>
+    <script src="../scripts/libraries/angular.min.js"></script>
 
     <link href="../assets/css/style.css" rel="stylesheet">
     <script>
