--- a/app/html/notification.html
+++ b/app/html/notification.html
@@ -2,9 +2,8 @@
 <html ng-app>
 <head>
     <title>Notification</title>
-    
-    <script src="../scripts/lib/angular.js"></script>
-    <script src="../scripts/lib/underscore.js"></script>
+    <script src="../scripts/libraries/jquery.min.js"></script>
+    <script src="../scripts/libraries/angular.min.js"></script>
     <link href="../assets/css/style.css" rel="stylesheet">
     <script>
         function NotificationCtrl($scope){
