--- a/app/html/options.html
+++ b/app/html/options.html
@@ -3,9 +3,9 @@
 <head>
     <title>Prepros Options</title>
 
-    <script src="../scripts/lib/jquery.js"></script>
-    <script src="../scripts/lib/bootstrap.js"></script>
-    <script src="../scripts/lib/angular.js"></script>
+    <script src="../scripts/libraries/jquery.min.js"></script>
+    <script src="../scripts/libraries/angular.min.js"></script>
+    <script src="../scripts/libraries/bootstrap.min.js"></script>
     <link href="../assets/css/style.css" rel="stylesheet">
     <script>
         function OptionsCtrl($scope) {
