--- a/app/html/notification.html
+++ b/app/html/notification.html
@@ -3,6 +3,7 @@
 <head>
     <title>Notification</title>
     <script src="../scripts/libraries/jquery.min.js"></script>
+    <script src="../scripts/libraries/underscore.min.js"></script>
     <script src="../scripts/libraries/angular.min.js"></script>
     <link href="../assets/css/style.css" rel="stylesheet">
     <script>
