fixed sass bug in options

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -163,7 +163,7 @@
                 <span class="label-desc">Use Compass</span>
             </label>
             <label>
-                <input type="checkbox" ng-model="userConfig.scss.fullCompass">
+                <input type="checkbox" ng-model="userConfig.sass.fullCompass">
                 <span class="label-desc">Full Compass Support</span>
             </label>
             <label>
