load scripts preserving the order

--- a/app/app.html
+++ b/app/app.html
@@ -30,12 +30,11 @@
     <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- Angular loader and script loader -->
-    <script src="scripts/libraries/angular-loader.min.js"></script>
-    <script src="scripts/libraries/script.min.js"></script>
+    <script src="scripts/libraries/LAB.min.js"></script>
 
     <!--Load custom script -->
-    <script src="scripts/load.js"></script>
     <script src="scripts/frame.js"></script>
+    <script src="scripts/load.js"></script>
 
 </head>
 <body class="wrapper clearfix" ng-controller="MainCtrl" x-drag-drop-project x-bind-keyboard-shortcuts>
